2009-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/average.c (AverageImages): Moved from image.c to new
	average.c file.

	* magick/colormap.h (VerifyColormapIndex): Moved here from color.h

	* magick/colormap.c (AllocateImageColormap): Moved from image.c to
	new colormap.c source file.
	(CycleColormapImage): Moved from image.c.
	(ReplaceImageColormap): Moved from image.c.
	(SortColormapByIntensity): Moved from image.c.
	(MagickConstrainColormapIndex): Moved here from color.c.

	* magick/describe.c (DescribeImage): Moved from image.c to new
	describe.c source file.

	* magick/plasma.c (PlasmaImage): Moved from image.c to new
	plasma.c source file.

	* magick/statistics.c (GetImageStatistics): Moved from image.c to
	new statistics.c source file.

	* magick/gradient.c (GradientImage): Moved from image.c to new
	gradient.c source file.

	* magick/texture.c (ConstituteTextureImage,TextureImage): Moved to
	new texture.c source file.

	* coders/svg.c (ENABLE_SVG_WRITER): Disable SVG writer by default
	since it usually does not work correctly and is unlikely to work
	correctly any time soon.

2009-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (ProfileImage): GlobExpression is case
	sensitive so assure that its glob strings are always upper-cased.
	Without this fix, lower-cased arguments like "icm" would fail to
	be removed.  This would not be much of a problem except that the
	documentation claims that lower-case works.
	(SetImageProfile): Assure that profile names are upper-cased.

	* magick/fx.c (ColorMatrixImage): Add opaque opacity channel if
	image currently lacks an opacity channel but the matrix updates
	the opacity channel.  Requested by Kerry Panchoo.

2009-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (GetIPTCStream): Updates from John.Sergeant to fix
	issues with IPTC record 2 blocks and to deal better with IPTC
	embedded in an 8BIM profile.
