@@ -55,17 +55,18 @@
 <div class="contents topic" id="contents">
 <p class="topic-title first">Contents</p>
 <ul class="simple">
-<li><a class="reference internal" href="#allocateimageprofileiterator" id="id13">AllocateImageProfileIterator</a></li>
-<li><a class="reference internal" href="#deallocateimageprofileiterator" id="id14">DeallocateImageProfileIterator</a></li>
-<li><a class="reference internal" href="#deleteimageprofile" id="id15">DeleteImageProfile</a></li>
-<li><a class="reference internal" href="#getimageprofile" id="id16">GetImageProfile</a></li>
-<li><a class="reference internal" href="#nextimageprofile" id="id17">NextImageProfile</a></li>
-<li><a class="reference internal" href="#profileimage" id="id18">ProfileImage</a></li>
-<li><a class="reference internal" href="#setimageprofile" id="id19">SetImageProfile</a></li>
+<li><a class="reference internal" href="#allocateimageprofileiterator" id="id15">AllocateImageProfileIterator</a></li>
+<li><a class="reference internal" href="#appendimageprofile" id="id16">AppendImageProfile</a></li>
+<li><a class="reference internal" href="#deallocateimageprofileiterator" id="id17">DeallocateImageProfileIterator</a></li>
+<li><a class="reference internal" href="#deleteimageprofile" id="id18">DeleteImageProfile</a></li>
+<li><a class="reference internal" href="#getimageprofile" id="id19">GetImageProfile</a></li>
+<li><a class="reference internal" href="#nextimageprofile" id="id20">NextImageProfile</a></li>
+<li><a class="reference internal" href="#profileimage" id="id21">ProfileImage</a></li>
+<li><a class="reference internal" href="#setimageprofile" id="id22">SetImageProfile</a></li>
 </ul>
 </div>
 <div class="section" id="allocateimageprofileiterator">
-<h1><a class="toc-backref" href="#id13">AllocateImageProfileIterator</a></h1>
+<h1><a class="toc-backref" href="#id15">AllocateImageProfileIterator</a></h1>
 <div class="section" id="synopsis">
 <h2>Synopsis</h2>
 <pre class="literal-block">
@@ -91,15 +92,54 @@ ImageProfileIterator AllocateImageProfileIterator( const <a class="reference ext
 </dl>
 </div>
 </div>
-<div class="section" id="deallocateimageprofileiterator">
-<h1><a class="toc-backref" href="#id14">DeallocateImageProfileIterator</a></h1>
+<div class="section" id="appendimageprofile">
+<h1><a class="toc-backref" href="#id16">AppendImageProfile</a></h1>
 <div class="section" id="id1">
+<h2>Synopsis</h2>
+<pre class="literal-block">
+MaickPassFail AppendImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name,
+                                  const unsigned char *profile_chunk,
+                                  const size_t chunk_length );
+</pre>
+</div>
+<div class="section" id="id2">
+<h2>Description</h2>
+<p>AppendImageProfile adds a named profile to the image. If a profile with the
+same name already exists, then the new profile data is appended to the
+existing profile. If a null profile address is supplied, then an existing
+profile is removed. The profile is copied into the image. Note that this
+function does not execute CMS color profiles. Any existing CMS color
+profile is simply added/updated. Use the ProfileImage() function in order
+to execute a CMS color profile.</p>
+<p>The format of the AppendImageProfile method is:</p>
+<pre class="literal-block">
+MaickPassFail AppendImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name,
+                                  const unsigned char *profile_chunk,
+                                  const size_t chunk_length );
+</pre>
+<dl class="docutils">
+<dt>image:</dt>
+<dd>The image.</dd>
+<dt>name:</dt>
+<dd>Profile name. Valid names are &quot;8BIM&quot;, &quot;ICM&quot;, &quot;IPTC&quot;, XMP, or any
+unique text string.</dd>
+<dt>profile_chunk:</dt>
+<dd>Address of profile chunk to add or append. Pass zero
+to remove an existing profile.</dd>
+<dt>length:</dt>
+<dd>The length of the profile chunk to add or append.</dd>
+</dl>
+</div>
+</div>
+<div class="section" id="deallocateimageprofileiterator">
+<h1><a class="toc-backref" href="#id17">DeallocateImageProfileIterator</a></h1>
+<div class="section" id="id3">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 void DeallocateImageProfileIterator( ImageProfileIterator profile_iterator );
 </pre>
 </div>
-<div class="section" id="id2">
+<div class="section" id="id4">
 <h2>Description</h2>
 <p>DeallocateImageProfileIterator deallocates an image profile iterator.</p>
 <p>The format of the DeallocateImageProfileIterator method is:</p>
@@ -114,14 +154,14 @@ void DeallocateImageProfileIterator( ImageProfileIterator profile_iterator );
 </div>
 </div>
 <div class="section" id="deleteimageprofile">
-<h1><a class="toc-backref" href="#id15">DeleteImageProfile</a></h1>
-<div class="section" id="id3">
+<h1><a class="toc-backref" href="#id18">DeleteImageProfile</a></h1>
+<div class="section" id="id5">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 unsigned int DeleteImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name );
 </pre>
 </div>
-<div class="section" id="id4">
+<div class="section" id="id6">
 <h2>Description</h2>
 <p>DeleteImageProfile removes a named profile from the image.</p>
 <p>The format of the DeleteImageProfile method is:</p>
@@ -139,15 +179,15 @@ generic profile name.</dd>
 </div>
 </div>
 <div class="section" id="getimageprofile">
-<h1><a class="toc-backref" href="#id16">GetImageProfile</a></h1>
-<div class="section" id="id5">
+<h1><a class="toc-backref" href="#id19">GetImageProfile</a></h1>
+<div class="section" id="id7">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 const unsigned char *GetImageProfile( const <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name,
                                       size_t *length );
 </pre>
 </div>
-<div class="section" id="id6">
+<div class="section" id="id8">
 <h2>Description</h2>
 <p>GetImageProfile returns a pointer to the named image profile if it is
 present. A null pointer is returned if the named profile is not present.</p>
@@ -173,15 +213,15 @@ if length is not needed.</dd>
 </div>
 </div>
 <div class="section" id="nextimageprofile">
-<h1><a class="toc-backref" href="#id17">NextImageProfile</a></h1>
-<div class="section" id="id7">
+<h1><a class="toc-backref" href="#id20">NextImageProfile</a></h1>
+<div class="section" id="id9">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 MagickPassFail NextImageProfile( ImageProfileIterator profile_iterator, const char ** name,
                                  const unsigned char ** profile, size_t *length );
 </pre>
 </div>
-<div class="section" id="id8">
+<div class="section" id="id10">
 <h2>Description</h2>
 <p>NextImageProfile iterates forward to the next image profile. The profile
 name is returned along with the profile data, and length.  If there are
@@ -204,15 +244,15 @@ MagickPassFail NextImageProfile( ImageProfileIterator profile_iterator, const ch
 </div>
 </div>
 <div class="section" id="profileimage">
-<h1><a class="toc-backref" href="#id18">ProfileImage</a></h1>
-<div class="section" id="id9">
+<h1><a class="toc-backref" href="#id21">ProfileImage</a></h1>
+<div class="section" id="id11">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 unsigned int ProfileImage( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name, unsigned char *profile,
                            const size_t length, unsigned int clone );
 </pre>
 </div>
-<div class="section" id="id10">
+<div class="section" id="id12">
 <h2>Description</h2>
 <p>ProfileImage() adds, applies, or removes a ICM, IPTC, or generic profile
 from an image.  If the profile is NULL, it is removed from the image
@@ -250,15 +290,15 @@ ownership of it.</dd>
 </div>
 </div>
 <div class="section" id="setimageprofile">
-<h1><a class="toc-backref" href="#id19">SetImageProfile</a></h1>
-<div class="section" id="id11">
+<h1><a class="toc-backref" href="#id22">SetImageProfile</a></h1>
+<div class="section" id="id13">
 <h2>Synopsis</h2>
 <pre class="literal-block">
 unsigned int SetImageProfile( <a class="reference external" href="../api/types.html#image">Image</a> *image, const char *name, const unsigned char *profile,
                               const size_t length );
 </pre>
 </div>
-<div class="section" id="id12">
+<div class="section" id="id14">
 <h2>Description</h2>
 <p>SetImageProfile adds a named profile to the image. If a profile with the
 same name already exists, then it is replaced. If a null profile address
@@ -294,7 +334,7 @@ profile.</dd>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-09-16 02:30 UTC.
+Generated on: 2009-09-16 19:30 UTC.
 
 </div>
 </body>
